--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "vitepress": "^1.1.4"
   },
   "scripts": {
-    "docs:dev": "vitepress dev docs",
+    "dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs --port 8080"
   }
