--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
+          version: 9.1.0
           node-version: 20
           cache: pnpm # 或 pnpm / yarn
       - name: Setup Pages
