--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "devDependencies": {
-    "less": "^4.2.0",
-    "vitepress": "^1.1.4"
-  },
   "scripts": {
     "dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs --port 8080"
-  }
+  },
+  "devDependencies": {
+    "less": "^4.2.0",
+    "vitepress": "^1.1.4"
+  },
+  "packageManager": "pnpm@9.1.0"
 }
