--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "less": "^4.2.0",
     "vitepress": "^1.1.4"
   },
-  "packageManager": "pnpm@9.1.0"
+  "packageManager": "pnpm@9.1.0",
+  "dependencies": {
+    "vue": "^3.4.27"
+  }
 }
