--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "packageManager": "pnpm@9.1.0",
   "dependencies": {
+    "gitalk": "^1.8.0",
+    "save": "^2.9.0",
     "vue": "^3.4.27"
   }
 }
